js/src/tests/test262/built-ins/Error/isError/non-error-objects.js
assert
.
sameValue
(
Error
.
isError
(
{
}
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
[
]
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
function
(
)
{
}
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
/
a
/
g
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
Error
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
EvalError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
RangeError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
ReferenceError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
SyntaxError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
TypeError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
URIError
)
false
)
;
if
(
typeof
AggregateError
!
=
=
'
undefined
'
)
{
assert
.
sameValue
(
Error
.
isError
(
AggregateError
)
false
)
;
}
if
(
typeof
SuppressedError
!
=
=
'
undefined
'
)
{
assert
.
sameValue
(
Error
.
isError
(
SuppressedError
)
false
)
;
}
reportCompare
(
0
0
)
;
